edit in some logic files